# Suite

./: .clangd  .gitignore  CMakeLists.txt  main.cu
modules/bvh/: BVH.cu  BVH.cuh  CMakeLists.txt
modules/cuda/: CMakeLists.txt  CudaMacros.cuh  CudaPtr.cu  CudaPtr.cuh
modules/geoquery/: CMakeLists.txt  Triangle.cu  Triangle.cuh
modules/model/: BBox.cuh  CMakeLists.txt  Camera.cuh  Model.cu  Model.cuh  Object.cu  Object.cuh  Scene.cu  Scene.cuh  Vertex.cuh
modules/softras/: CMakeLists.txt  SoftwareRasterizer.cu  SoftwareRasterizer.cuh
modules/texture/: CMakeLists.txt  Texture.cu  Texture.cuh
runtime/shaders/bbox/: bbox.frag
runtime/shaders/default/: default.frag  default.vert
ui_modules/opengl/: CMakeLists.txt  ModelGL.cu  ModelGL.cuh  ObjectGL.cu  ObjectGL.cuh  SceneGL.cu  SceneGL.cuh
ui_modules/primitives/: CMakeLists.txt  prim.cu  prim.cuh
ui_modules/scripting/: CMakeLists.txt  Scripting.cu  Scripting.cuh
ui_modules/shader/: CMakeLists.txt  Program.cu  Program.cuh
ui_modules/visualizer/: App.cu  App.cuh  CMakeLists.txt
